--- a/home.html
+++ b/home.html
@@ -38,11 +38,13 @@
 </head>
 
 <body>
+
+  <h1>TESTING</h1>
     <script>
-   var HOST = "ws://localhost:3000";
-   var ws = new WebSocket(HOST);
-   ws.onmessage = function (event) {
-};
+       var HOST = "ws://localhost:3000";
+       var ws = new WebSocket(HOST);
+       ws.onmessage = function (event) {
+    };
   </script>
 </body>
 
